Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2011-06-15 (SVN):
    * libs/timidity/instrum.c (load_instrument): Fix shadowing warnings
      due to reuse of variables i and tmp.
    * libs/timidity/instrum_dls.c: Fix gcc's shadowing warnings due to
      the stupid name clash with index().
    * libs/timidity/timidity.c (read_config_file): close the file before
      returning in error cases.

2011-06-13 (SVN):
    * gtk launcher: Changed so that there is now a "default" option for
      sound driver. If sound is selected as default, no driver option
      will be passed to the command line. Fixed the command line switch
      for the sunaudio option. Ensured that the sound setting stays the
      same across launcher binaries compiled for different environments.

2011-06-13 (SVN):
    * Updated Visual Studio project files.
    * Bumped beta version and date to 1.5.0-rc4/2011-06-13.  Updated
      documentation.

2011-06-13 (SVN):
    * Moved sys_dos.c out of the dos subdirectory, fixed the Makefile for
      dos targets.

2011-06-13 (SVN):
    * Changed sound driver interface so that snd_sys.c sends a linked
      list of drivers to snd_dma.c and snd_dma.c tries all of them until
      one of them successfully initializes.  If the user specifies a
      specific driver on the command line such as by -sndalsa, then the
      specified driver is tried only.  This mimics the windows snd_win.c
      behavior where dsound and wave drivers were tried.  This helps
      linux/unix users where we have three drivers to start the engine
      with sound working.  While we were there, separated dsound out of
      snd_win.c into its own snd_dsound.c, so that the two sources are
      independent.  Also severed the connections between snd_gus.c and
      snd_sb.c.

2011-06-13 (SVN):
    * Moved several dos driver sources under h2shared.

2011-06-13 (SVN):
    * bgmusic.c, snd_codec.h, snd_codeci.h: Changed MIDIDRIVER_MID back